oriented site content to the top on mobiles to fix the annoying keyboard offset issue on mobile

--- a/src/styles/general.css
+++ b/src/styles/general.css
@@ -39,6 +39,13 @@ button {
   width: 100vw;
 }
 
+@media only screen and (max-width: 480px) {
+  #root {
+    justify-content: start;
+    padding-top: 30px;
+  }
+}
+
 .my-1 {
   margin-top: 8px;
   margin-bottom: 8px;
